# master-cluster-HSE

./: .gitignore  CLUSTER_V100_README.md  README.md  apply_clingo_sft_cl_pipeline.py  apply_v100_vllm085_make_torchao_optional.py  docker-compose.rl.yml  docker-compose.v100-vllm085.yml  docker-compose.yml  migrate_hse_jobs_to_rocky.py  pyproject.toml  requirements.txt  requirements_container.txt
configs/: score_clingo_exact5_cluster.yaml  score_pythoncodes_cl.yaml  score_pythoncodes_cluster.yaml
containers/: Dockerfile.clrl-v100  Dockerfile.rl-grpo  Dockerfile.rl-grpo-v100-vllm085  Dockerfile.rl-grpo-v100-vllm085.bak_torchao_optional  Dockerfile.unsloth  Dockerfile.unsloth-v100  Dockerfile.vllm-v100  clrl-v100.def
grpo_trainer_lora_model/: adapter_config.json
jobs/: 00_build_sandbox_from_docker_archive.sbatch  00_check_env.sbatch  00_verify_qwen3_8b_rocky.sbatch  10_score_pythoncodes_cl.sbatch  11_score_length.sbatch  12_score_ppl_ifd_array.sbatch  13_score_lexical.sbatch  14_embed_semantic_array.sbatch  15_score_semantic.sbatch  16_score_llm_judge_array.sbatch  19_merge_curriculum_scores.sbatch  20_smoke_unsloth_v100.sbatch  21_smoke_vllm_v100.sbatch  22_smoke_train_one_v100.sbatch  23_smoke_eval_base_v100.sbatch  24_smoke_rl_grpo_stack.sbatch  25_smoke_unified_train_v100.sbatch  26_smoke_unified_eval_v100.sbatch  27_smoke_vllm_v100_legacy.sbatch  29_smoke_v100_vllm085_stack.sbatch  30_make_run_matrices.sbatch  30_smoke_v100_vllm085_qwen3.sbatch  31_smoke_v100_vllm085_train_existing.sbatch  31_train_array_v100.sbatch  32_eval_array_v100.sbatch  (+16 more)
src/: config.py  (+1 more)
(+145 files in other folders)
